fix footer z-index

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -33,7 +33,6 @@ code {
   color: #fff;
   width: 100%;
   display: flex;
-  z-index: 1100;
   box-sizing: border-box;
   flex-shrink: 0;
   flex-direction: column;
